Fix dark mode input text visibility by using CSS variables

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,3 +1,5 @@
+@use '@/styles/variables' as *;
+
 .input {
   border: 2px solid transparent;
   width: 15em;
@@ -5,20 +7,21 @@
   padding-left: 0.8em;
   outline: none;
   overflow: hidden;
-  background-color: #f3f3f3;
+  background-color: $color-background;
+  color: $color-text-primary;
   border-radius: 10px;
   transition: all 0.5s;
 
   &:disabled {
     opacity: 0.6;
     cursor: not-allowed;
-    background-color: #e0e0e0;
+    background-color: $color-background;
   }
 }
 
 .input:hover:not(:disabled),
 .input:focus:not(:disabled) {
-  border: 2px solid #4a9dec;
-  box-shadow: 0px 0px 0px 7px rgb(74, 157, 236, 20%);
-  background-color: white;
+  border: 2px solid $color-primary;
+  box-shadow: $box-shadow-focus;
+  background-color: $color-background-hover;
 }
